<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:padding="@dimen/dp_10"
        android:src="@drawable/svg_title_back_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/placeholder"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:background="@drawable/sel_title_expand_bg"
        android:paddingStart="@dimen/dp_10"
        android:paddingEnd="@dimen/dp_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/iv_back"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title_gallery_name"
            style="@style/style_font_black"
            android:layout_marginEnd="@dimen/dp_5"
            android:text="@string/all_image"
            android:textColor="@color/color_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_expand"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/iv_expand"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_20"
            android:background="@drawable/svg_title_expand"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tv_complete"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_30"
        android:layout_marginEnd="@dimen/dp_14"
        android:background="@drawable/sel_title_btn_bg_unenable"
        android:gravity="center"
        android:paddingStart="@dimen/dp_14"
        android:paddingEnd="@dimen/dp_14"
        android:text="@string/complete"
        android:textColor="@color/font_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>