<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_280"
    android:layout_marginStart="@dimen/dp_16"
    android:layout_marginEnd="@dimen/dp_16"
    android:layout_marginBottom="@dimen/dp_16"
    android:background="@drawable/shape_bg_corners_white"
    android:paddingStart="@dimen/dp_24"
    android:paddingEnd="@dimen/dp_24">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/style_font_black_big"
        android:layout_marginTop="@dimen/dp_22"
        android:text="@string/app_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.contrarywind.view.WheelView
        android:id="@+id/wvYear"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_25"
        app:layout_constraintBottom_toTopOf="@id/tvCancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/wvMonth"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginStart="@dimen/dp_8"/>


    <com.contrarywind.view.WheelView
        android:id="@+id/wvMonth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/wvYear"
        app:layout_constraintEnd_toStartOf="@id/wvDay"
        app:layout_constraintStart_toEndOf="@id/wvYear"
        app:layout_constraintTop_toTopOf="@id/wvYear"
        app:layout_constraintHorizontal_weight="1" />


    <com.contrarywind.view.WheelView
        android:id="@+id/wvDay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/wvMonth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/wvMonth"
        app:layout_constraintTop_toTopOf="@id/wvMonth"
        app:layout_constraintHorizontal_weight="1"/>

    <TextView
        android:id="@+id/tvCancel"
        style="@style/style_font_theme_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_22"
        android:padding="@dimen/dp_20"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvConfirm"
        style="@style/style_font_theme_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_22"
        android:padding="@dimen/dp_20"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>