<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/statusBar"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/preview_bg"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTitle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/preview_bg"
        app:layout_constraintTop_toBottomOf="@id/statusBar">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:contentDescription="@string/placeholder"
            android:padding="@dimen/dp_10"
            android:src="@drawable/svg_title_back_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvComplete"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginEnd="@dimen/dp_14"
            android:background="@drawable/sel_title_btn_bg"
            android:gravity="center"
            android:paddingStart="@dimen/dp_14"
            android:paddingEnd="@dimen/dp_14"
            android:text="@string/complete"
            android:textColor="@color/color_white"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tvTitle"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/color_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/ivDelete"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:contentDescription="@string/placeholder"
            android:padding="@dimen/dp_10"
            android:src="@drawable/svg_upload_delete"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPreview"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_80"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/clSelect">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.95"
            android:background="@color/preview_bg" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvPreview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:alpha="0.2"
            android:background="@color/color_gray"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSelect"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_50"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.95"
            android:background="@color/preview_bg" />

        <ImageView
            android:id="@+id/ivSelect"
            android:layout_width="@dimen/dp_20"
            android:layout_height="@dimen/dp_50"
            android:contentDescription="@string/app_name"
            android:paddingTop="@dimen/dp_15"
            android:paddingBottom="@dimen/dp_15"
            android:src="@drawable/svg_gallery_content_unselect"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tvSelect"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSelect"
            style="@style/style_font_black"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/dp_10"
            android:paddingEnd="@dimen/dp_12"
            android:text="@string/select"
            android:textColor="@color/color_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>