<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_bg_top_corners_white"
    android:paddingStart="@dimen/dp_10"
    android:paddingEnd="@dimen/dp_10"
    android:paddingBottom="@dimen/dp_15">

    <TextView
        android:id="@+id/tvCancel"
        style="@style/style_font_black_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_15"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvConfirm"
        style="@style/style_font_theme_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/dp_10"
        android:paddingTop="@dimen/dp_15"
        android:paddingEnd="@dimen/dp_10"
        android:paddingBottom="@dimen/dp_15"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        style="@style/style_font_black_16"
        android:text="选择时间"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvCancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvCancel"
        tools:ignore="HardcodedText" />

    <View
        android:id="@+id/line"
        style="@style/style_line_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCancel" />


    <TextView
        android:id="@+id/tvTitle"
        style="@style/style_font_black_16"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvConfirm"
        android:layout_marginTop="@dimen/dp_15"
        tools:text="@string/app_name" />

    <com.sunny.zy.widget.wheel.WheelView
        android:id="@+id/wvYear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/wvMonth"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />


    <com.sunny.zy.widget.wheel.WheelView
        android:id="@+id/wvMonth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/wvYear"
        app:layout_constraintEnd_toStartOf="@id/wvDay"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/wvYear"
        app:layout_constraintTop_toTopOf="@id/wvYear" />


    <com.sunny.zy.widget.wheel.WheelView
        android:id="@+id/wvDay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/wvMonth"
        app:layout_constraintEnd_toStartOf="@id/wvHour"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/wvMonth"
        app:layout_constraintTop_toTopOf="@id/wvMonth" />

    <com.sunny.zy.widget.wheel.WheelView
        android:id="@+id/wvHour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/wvDay"
        app:layout_constraintEnd_toStartOf="@id/wvMinute"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/wvDay"
        app:layout_constraintTop_toTopOf="@id/wvDay" />


    <com.sunny.zy.widget.wheel.WheelView
        android:id="@+id/wvMinute"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/wvHour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@id/wvHour"
        app:layout_constraintTop_toTopOf="@id/wvHour" />

</androidx.constraintlayout.widget.ConstraintLayout>